src/orgs/usa/data-model/objects/PatientServerProfile__c/PatientServerProfile__c.object-meta.xml
<CustomObject>
    <label>Patient Server Profile</label>
    <nameField>
        <displayFormat>PSP-{0000}</displayFormat>
        <label>Patient Server Profile #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Server Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>