src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/ArtemisPatientId__c.field-meta.xml
<CustomField>
    <fullName>ArtemisPatientId__c</fullName>
    <externalId>true</externalId>
    <label>Artemis Patient Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>