src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/BiologicalSex__c.field-meta.xml
<CustomField>
    <fullName>BiologicalSex__c</fullName>
    <label>Biological Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>