src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>