src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/CareTeamObGynProvider__c.field-meta.xml
<CustomField>
    <fullName>CareTeamObGynProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OB/GYN Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Server Profiles (OB/GYN Provider)</relationshipLabel>
    <relationshipName>ObGynProviderPatientServerProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>