src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/CareTeamPcpProvider__c.field-meta.xml
<CustomField>
    <fullName>CareTeamPcpProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCP Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Server Profiles (PCP Provider)</relationshipLabel>
    <relationshipName>PcpProviderPatientServerProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>