src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>