src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/EmrServer__c.field-meta.xml
<CustomField>
    <fullName>EmrServer__c</fullName>
    <label>EMR Server</label>
    <referenceTo>EmrServer__c</referenceTo>
    <relationshipLabel>Patient Server Profiles</relationshipLabel>
    <relationshipName>PatientServerProfiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>