src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/EmrServerName__c.field-meta.xml
<CustomField>
    <fullName>EmrServerName__c</fullName>
    <description>Used mainly in Flows to prevent additional queries and logic to get the server name.</description>
    <formula>EmrServer__r.Name</formula>
    <label>EMR Server Name</label>
    <type>Text</type>
</CustomField>