src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Non-Hispanic</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>White non-Hispanic</fullName>
            </value>
            <value>
                <fullName>White Hispanic</fullName>
            </value>
            <value>
                <fullName>Black non-Hispanic</fullName>
            </value>
            <value>
                <fullName>Black Hispanic</fullName>
            </value>
            <value>
                <fullName>Asian non-Hispanic</fullName>
            </value>
            <value>
                <fullName>Asian Hispanic</fullName>
            </value>
            <value>
                <fullName>American Indian</fullName>
            </value>
            <value>
                <fullName>Other, please specify</fullName>
            </value>
            <value>
                <fullName>Refused/Choose not to disclose</fullName>
            </value>
            <value>
                <fullName>American Indian/Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black/African American</fullName>
            </value>
            <value>
                <fullName>Hispanic/Latino</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian/Other Pacific</fullName>
            </value>
            <value>
                <fullName>White/Caucasian</fullName>
            </value>
            <value>
                <fullName>Not Asked</fullName>
            </value>
            <value>
                <fullName>Not Provided</fullName>
            </value>
            <value>
                <fullName>Asked but unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>