src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>