src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/GenderIdentity__c.field-meta.xml
<CustomField>
    <fullName>GenderIdentity__c</fullName>
    <label>Gender Identity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Female-to-Male (FTM)/Transgender Male/Trans Man</fullName>
            </value>
            <value>
                <fullName>Male-to-Female (MTF)/Transgender Female/Trans Woman</fullName>
            </value>
            <value>
                <fullName>Genderqueer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Choose not to disclose</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other, please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>