src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>