src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/HomePhoneEligibleForTextMessages__c.field-meta.xml
<CustomField>
    <fullName>HomePhoneEligibleForTextMessages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Phone - Eligible for text messages</label>
    <type>Checkbox</type>
</CustomField>