src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/HomePhoneEligibleForVoiceMail__c.field-meta.xml
<CustomField>
    <fullName>HomePhoneEligibleForVoiceMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Phone - Eligible for voice mail</label>
    <type>Checkbox</type>
</CustomField>