src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>