src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/MobilePhoneEligibleForTextMessages__c.field-meta.xml
<CustomField>
    <fullName>MobilePhoneEligibleForTextMessages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile - Eligible for text messages</label>
    <type>Checkbox</type>
</CustomField>