src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/MobilePhoneEligibleForVoiceMail__c.field-meta.xml
<CustomField>
    <fullName>MobilePhoneEligibleForVoiceMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile - Eligible for voice mail</label>
    <type>Checkbox</type>
</CustomField>