src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(NOT(ISBLANK(PreferredFirstName__c)), PreferredFirstName__c, IF(NOT(ISBLANK(FirstName__c)), FirstName__c, &apos;&apos;))
+ &apos; &apos; +
IF(NOT(ISBLANK(LastName__c)), LastName__c, &apos;&apos;)
+ &apos; &apos; +
IF(NOT(ISBLANK(Suffix__c)), Suffix__c, &apos;&apos;)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>