src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PatientAccount__c.field-meta.xml
<CustomField>
    <fullName>PatientAccount__c</fullName>
    <label>Patient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Server Profiles</relationshipLabel>
    <relationshipName>PatientServerProfiles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>