src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PatientSource__c.field-meta.xml
<CustomField>
    <fullName>PatientSource__c</fullName>
    <inlineHelpText>Field not in sync with Artemis.</inlineHelpText>
    <label>Patient Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>