src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PhoneEligibleForTextMessages__c.field-meta.xml
<CustomField>
    <fullName>PhoneEligibleForTextMessages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone - Eligible for text messages</label>
    <type>Checkbox</type>
</CustomField>