src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PhoneEligibleForVoiceMail__c.field-meta.xml
<CustomField>
    <fullName>PhoneEligibleForVoiceMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone - Eligible for voice mail</label>
    <type>Checkbox</type>
</CustomField>