src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PreferredFirstName__c.field-meta.xml
<CustomField>
    <fullName>PreferredFirstName__c</fullName>
    <label>Preferred First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>