src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PrimaryInsuranceArtemisMetadata__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsuranceArtemisMetadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Insurance Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EmrServerInsuranceCompanyMetadata__c.EmrServer__c</field>
            <operation>equals</operation>
            <valueField>$Source.EmrServer__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>EmrServerInsuranceCompanyMetadata__c</referenceTo>
    <relationshipLabel>Patient Server Profiles (Primary Insurance)</relationshipLabel>
    <relationshipName>PrimaryInsurancePatientServerProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>