src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PrimaryInsuranceCoPay__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsuranceCoPay__c</fullName>
    <label>Primary Insurance Co-Pay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>