src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PrimaryInsuranceEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsuranceEffectiveDate__c</fullName>
    <label>Primary Insurance Effective Date</label>
    <type>Date</type>
</CustomField>