src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PrimaryInsuranceGroupNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsuranceGroupNumber__c</fullName>
    <label>Primary Insurance Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>