src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PrimaryInsurancePolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsurancePolicyNumber__c</fullName>
    <label>Primary Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>