src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PrimaryInsuranceReferralInternalComments__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsuranceReferralInternalComments__c</fullName>
    <inlineHelpText>Field not in sync with Artemis.</inlineHelpText>
    <label>Primary Insurance Referral Comments</label>
    <type>TextArea</type>
</CustomField>