src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PrimaryInsuranceReferralRequired__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsuranceReferralRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Referral Required</label>
    <type>Checkbox</type>
</CustomField>