src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PrimaryLocation__c.field-meta.xml
<CustomField>
    <fullName>PrimaryLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IVIRMA Location Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Server Profiles (Primary Location)</relationshipLabel>
    <relationshipName>LocationPatientServerProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>