src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/PrimaryProvider__c.field-meta.xml
<CustomField>
    <fullName>PrimaryProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Server Profiles (Primary Provider)</relationshipLabel>
    <relationshipName>PrimaryProviderPatientServerProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>