src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <label>Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>He/Him</fullName>
                <label>he/him</label>
            </value>
            <value>
                <fullName>She/Her</fullName>
                <label>she/her</label>
            </value>
            <value>
                <fullName>They/Them</fullName>
                <label>they/them</label>
            </value>
            <value>
                <fullName>He/They</fullName>
                <label>he/they</label>
            </value>
            <value>
                <fullName>She/They</fullName>
                <label>she/they</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>