src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>African American</fullName>
            </value>
            <value>
                <fullName>American Indian / Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Caucasian</fullName>
            </value>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>More Than One Race</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Black or African-American</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Other, please specify</fullName>
            </value>
            <value>
                <fullName>Asked but unknown</fullName>
            </value>
            <value>
                <fullName>Choose not to disclose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>