src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/SecondaryInsuranceCoPay__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInsuranceCoPay__c</fullName>
    <label>Secondary Insurance Co-Pay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>