src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/SecondaryInsuranceEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInsuranceEffectiveDate__c</fullName>
    <label>Secondary Insurance Effective Date</label>
    <type>Date</type>
</CustomField>