src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/SecondaryInsuranceGroupNumber__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInsuranceGroupNumber__c</fullName>
    <label>Secondary Insurance Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>