src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/SecondaryInsurancePolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInsurancePolicyNumber__c</fullName>
    <label>Secondary Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>