src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/SecondaryInsuranceReferralIntrnlComments__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInsuranceReferralIntrnlComments__c</fullName>
    <inlineHelpText>Field not in sync with Artemis.</inlineHelpText>
    <label>Secondary Insurance Referral Comments</label>
    <type>TextArea</type>
</CustomField>