src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/SecondaryInsuranceReferralRequired__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInsuranceReferralRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Referral Required</label>
    <type>Checkbox</type>
</CustomField>