src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/SexualOrientation__c.field-meta.xml
<CustomField>
    <fullName>SexualOrientation__c</fullName>
    <label>Sexual Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight or heterosexual</fullName>
            </value>
            <value>
                <fullName>Lesbian, gay, or homosexual</fullName>
            </value>
            <value>
                <fullName>Bisexual</fullName>
            </value>
            <value>
                <fullName>Something else</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Choose not to disclose</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other, please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>