src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/SocialSecurityNumber__c.field-meta.xml
<CustomField>
    <fullName>SocialSecurityNumber__c</fullName>
    <label>SSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>