src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>