src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/TertiaryInsuranceCoPay__c.field-meta.xml
<CustomField>
    <fullName>TertiaryInsuranceCoPay__c</fullName>
    <label>Tertiary Insurance Co-Pay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>