src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/TertiaryInsuranceEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>TertiaryInsuranceEffectiveDate__c</fullName>
    <label>Tertiary Insurance Effective Date</label>
    <type>Date</type>
</CustomField>