src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/TertiaryInsuranceGroupNumber__c.field-meta.xml
<CustomField>
    <fullName>TertiaryInsuranceGroupNumber__c</fullName>
    <label>Tertiary Insurance Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>