src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/TertiaryInsurancePolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>TertiaryInsurancePolicyNumber__c</fullName>
    <label>Tertiary Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>